<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	      xmlns:tools="http://schemas.android.com/tools"
	      android:layout_width="fill_parent"
	      android:layout_height="fill_parent"
	      android:orientation="vertical">

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:layout_gravity="center_horizontal"
      android:orientation="horizontal">

    <ImageButton
	android:id="@+id/left_btn"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:contentDescription="@string/left"
	android:layout_weight="1"
	android:src="@drawable/left" />
    <ImageButton
	android:id="@+id/rttleft_btn"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:contentDescription="@string/rttleft"
	android:layout_weight="1"
	android:src="@drawable/rttleft" />
    <ImageButton
	android:id="@+id/down_btn"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:contentDescription="@string/down"
	android:layout_weight="1"
	android:src="@drawable/down" />
    <ImageButton
	android:id="@+id/rttright_btn"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:contentDescription="@string/rttright"
	android:layout_weight="1"
	android:src="@drawable/rttright" />
    <ImageButton
	android:id="@+id/right_btn"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:contentDescription="@string/right"
	android:layout_weight="1"
	android:src="@drawable/right" />
  </LinearLayout>

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:layout_gravity="center_horizontal"
      android:orientation="horizontal">
    <TextView
	android:id="@+id/scores"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_weight="1"
	android:textSize="15sp"
	style="@style/Scores"/>
    <TextView
	android:id="@+id/high_scores"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_weight="1"
	android:textSize="15sp"
	style="@style/Scores"/>
  </LinearLayout>


  <dev.tetris.TetrisView
      android:id="@+id/tetrisview"
      android:layout_width="fill_parent"
      android:layout_height="match_parent"/>

  <TextView
      android:id="@+id/message"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      style="@style/Banner" />

</LinearLayout>  
